# amazing_hunting_HWDJ5

./: db.sqlite3  pyproject.toml
ad/: admin.py  serializers.py
ad/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ad_description.py
ad/urls/: ad.py  cat.py  selection.py
ad/views/: ad.py  cat.py  selection.py
ads/: admin.py  models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options.py  0003_alter_ad_author.py
ads/urls/: ad.py  cat.py  selection.py
ads/views/: ad.py  cat.py  selection.py
amazing_hunting/: settings.py  urls.py
data/: ads.json  categories.json  csv_to_json.py  user.json
tests/: factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_data.py
